--- a/devfolio-1.0.0/devfolio-1.0.0/assets/css/main.css
+++ b/devfolio-1.0.0/devfolio-1.0.0/assets/css/main.css
@@ -169,7 +169,7 @@ h6 {
 .header .logo img {
   max-height: 32px; /* this controls layout height */
   margin-right: 8px;
-padding: 2px 0 0 0;
+padding: 0px 0 0 0px;
   height: auto;
   width: auto;
 
@@ -205,6 +205,7 @@ padding: 2px 0 0 0;
     display: flex;
     list-style: none;
     align-items: center;
+
   }
 
   .navmenu li {
@@ -233,6 +234,7 @@ padding: 2px 0 0 0;
     white-space: nowrap;
     transition: 0.3s;
     position: relative;
+    font-family: "Roboto", sans-serif;
   }
 
   .navmenu a i,
@@ -702,19 +704,21 @@ section,
 
 .hero .container {
   position: relative;
-  z-index: 3;
+  z-index: 2;
 }
 
 .hero h2 {
   margin: 0;
   font-size: 64px;
   font-weight: 700;
+font-family: "Roboto", sans-serif;
 }
 
 .hero p {
   margin: 5px 0 0 0;
   font-size: 36px;
   font-weight: 600;
+  font-family: "Share Tech", sans-serif;
 }
 
 .hero p span {
@@ -724,12 +728,12 @@ section,
 @media (max-width: 768px) {
   .hero h2 {
     font-size: 32px;
-    font-family: "Quicksand", sans-serif;
+
   }
 
   .hero p {
     font-size: 20px;
-    font-family: "Quicksand", sans-serif;
+
   }
 }
 
@@ -743,9 +747,66 @@ section,
 }
 
 .about .skills-content h5 {
+  font-size: 35px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.UXUi-skills-title {
   font-size: 18px;
   font-weight: 700;
   margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.frontend-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.Backend-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.Frameworks-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.Databases-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.CloudStorage-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.RPA-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
+}
+
+.about .skills-content h5.Design-skills-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 30px 0 15px 0;
+  font-family: "Share Tech", sans-serif;
 }
 
 .about .progress {
@@ -754,6 +815,8 @@ section,
   background: none;
   border-radius: 0;
   margin-top: 15px;
+
+
 }
 
 .about .progress .skill {
@@ -764,16 +827,20 @@ section,
   display: block;
   font-weight: 600;
   font-family: var(--heading-font);
+  font-family: "Roboto", sans-serif;
+
 }
 
 .about .progress .skill .val {
   float: right;
   font-style: normal;
+  padding: 0px 50px 0px 0px;
 }
 
 .about .progress-bar-wrap {
   background: color-mix(in srgb, var(--default-color), transparent 90%);
   height: 10px;
+  width:  92%;
 }
 
 .about .progress-bar {
@@ -784,27 +851,18 @@ section,
 }
 
 .about .about-me h4 {
-  font-size: 28px;
+  font-size: 45px;
+  text-align: center;
   position: relative;
   padding-bottom: 10px;
   margin-bottom: 30px;
   font-weight: 700;
-}
-
-.about .about-me h4:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 64px;
-  height: 3px;
-  background: var(--accent-color);
-  left: 0;
-  bottom: 0;
-  margin: auto;
+  font-family: "Share Tech", sans-serif;
 }
 
 .about .about-me p {
-  font-size: 18px;
+  font-size: 15px;
+  text-align:justify;
 }
 
 /*--------------------------------------------------------------
@@ -865,6 +923,24 @@ section,
   background: var(--background-color);
   border: 2px solid var(--accent-color);
 }
+
+/*--------------------------------------------------------------
+# Download Resume Section
+--------------------------------------------------------------*/
+.btn-play {
+    position: relative;
+    display: block;
+    box-sizing: content-box;
+    width: 16px;
+    height: 26px;
+    border-radius: 100%;
+    border: none;
+    outline: none !important;
+    padding: 18px 20px 20px 28px;
+    background: var(--primary);
+}
+
+
 
 /*--------------------------------------------------------------
 # Services Section
